@@ -9,6 +9,7 @@ INPUT = inc/ucommon
 FILE_PATTERNS = *.h
 RECURSIVE = NO
 ALIASES = "license=\par License:\n"
+JAVADOC_AUTOBRIEF = YES
 OPTIMIZE_OUTPUT_FOR_C = YES
 OPTIMIZE_OUTPUT_JAVA = NO
 EXTRACT_ALL = NO
@@ -19,6 +20,8 @@ HIDE_UNDOC_MEMBERS = NO
 CASE_SENSE_NAMES = NO
 SHOW_INCLUDE_FILES = YES
 SORT_MEMBER_DOCS = YES
+SEARCH_INCLUDES = YES
+INCLUDE_PATH = inc /usr/include /usr/local/include
 GENERATE_TODOLIST = YES
 GENERATE_TESTLIST = YES
 GENERATE_BUGLIST = YES
@@ -43,7 +46,7 @@ LATEX_HIDE_INDICES = NO
 GENERATE_RTF = YES
 COMPACT_RTF = YES
 RTF_HYPERLINKS = NO
-GENERATE_MAN = YES
+GENERATE_MAN = NO
 GENERATE_XML = NO
 GENERATE_PERLMOD = NO
 ENABLE_PREPROCESSING = YES
@@ -59,11 +62,12 @@ CLASS_GRAPH = YES
 INCLUDE_GRAPH = YES
 INCLUDED_BY_GRAPH = YES
 CALL_GRAPH = YES
+SOURCE_BROWSER = YES
 GRAPHICAL_HIERARCHY = YES
 DOT_IMAGE_FORMAT = png
 DOT_TRANSPARENT = YES
-MAX_DOT_GRAPH_WIDTH = 1024
-MAX_DOT_GRAPH_HEIGHT = 1024
+# MAX_DOT_GRAPH_WIDTH = 1024
+# MAX_DOT_GRAPH_HEIGHT = 1024
 TEMPLATE_RELATIONS = NO
 GENERATE_LEGEND = YES
 SEARCHENGINE = NO
