@@ -358,6 +358,8 @@ esac
 
 UCOMMON_CLINK="$UCOMMON_CLINK $UCOMMON_LIBC"
 
+AC_PATH_PROG(DOXYGEN, doxygen, doxygen)
+AC_SUBST(DOXYGEN)
 AC_SUBST(CHECK)
 AC_SUBST(CXXFLAGS)
 AC_SUBST(UCOMMON_VISIBILITY)
