@@ -4,6 +4,10 @@ From ucommon 0.6.1 to 0.7.0
 - added getservice interface to get socket port #
 - added charbuf template
 - cidr policy chains simplified
+- some rationalization and improvement in socket class with the ability
+  to compare addresses, manipulate address lists, etc.
+- string finding with deliminators.
+- first pass at offering real documentation for the library via doxygen.
 
 From ucommon 0.6.0 to 0.6.1
 - support for static libpthreadGC2
